syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.responses.auth";
option java_multiple_files = true;

package responses;

message OauthLoginResponse {
  enum responseType {
    SUCCESS = 0;
    ERROR = 1;
  }
  responseType type = 1;
  string token = 2;
  string message = 3;
}
